--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://kenudata.blogspot.com/" class="logo">Ken you Data?</a>
+						<a href="blog.html" class="logo">Ken you Data?</a>
 					</header>
 
 				<!-- Nav -->
