--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Post</a></li>
+										<li><a href="Z_Score_Post.html" class="button">View Post</a></li>
 									</ul>
 								</article>
 								
