added plotly plot for render link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/CDC%20Health%20Behavior%20Geo.ipynb" class="image main"><img src="images/CDCmap.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/CDC%20Health%20Behavior%20Geo.ipynb" class="button large">View Project</a></li>
+									<li><a href="https://cdc-health-policy-choropleth.onrender.com/" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
