Images, text, and general restructure

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<p>I merged a CDC dataset on health behaviors and a dataset on health-related legislation to visualize the connection between health and the actions of law
 										 via choropleth map .</p>
 								</header>
-								<a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/CDC%20Health%20Behavior%20Geo.ipynb" class="image main"><img src="images/CDCmap.png" alt="" /></a>
+								<a href="https://cdc-health-policy-choropleth.onrender.com/" class="image main"><img src="images/CDCmap.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://cdc-health-policy-choropleth.onrender.com/" class="button large">View Project</a></li>
 								</ul>
@@ -65,22 +65,22 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Project 2:<br />
+										Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>Currently Under Construction.</center></p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Project 3:<br />
+										Regression</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>Currently Under Construction.</center></p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
