--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="logo">Ken you Data?</a>
+						<a href="index.html" class="logo"> >> To Projects</a>
 					</header>
 
 				<!-- Nav -->
@@ -47,18 +47,15 @@
 										Learn and grow with me, but I must ask one question: Ken you Data?</p>
 								</header>
 								<div class="image main"><img src="images/temperature_screenshot.png" alt="" /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
 							</section>
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="NormalDist_CentralTend_Post.html">Normal Distribution &<br />
-										Central Tendency</a></h2>
+										<h2><a href="NormalDist_CentralTend_Post.html">Normal Distribution</a></h2>
 									</header>
-									<a href="NormalDist_CentralTend_Post.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="NormalDist_CentralTend_Post.html" class="image fit"><img src="images/standardnormalcurve.png" alt="" /></a>
+									<p><center>The distribution other distributions look up to.</center></p>
 									<ul class="actions special">
 										<li><a href="NormalDist_CentralTend_Post.html" class="button">View Post</a></li>
 									</ul>
@@ -68,7 +65,7 @@
 										<h2><a href="Z_Score_Post.html">Z Score</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>Where am I on the normal distribution?</center></p>
 									<ul class="actions special">
 										<li><a href="Z_Score_Post.html" class="button">View Post</a></li>
 									</ul>
@@ -101,11 +98,6 @@
 							</form>
 						</section> -->
 						<section class="split contact">
-							<section class="alt">
-								<!-- <h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p> -->
-							</section>
 							<section>
 								<h3>Phone</h3>
 								<p><a href="#">(301) 378-4041</a></p>
