--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
 									<header>
 										<h2><a href="Z_Score_Post.html">Z Score</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/zscore.png" alt="" /></a>
 									<p><center>Where am I on the normal distribution?</center></p>
 									<ul class="actions special">
 										<li><a href="Z_Score_Post.html" class="button">View Post</a></li>
