normal distribution blog edits

--- a/NormalDist_CentralTend_Post.html
+++ b/NormalDist_CentralTend_Post.html
@@ -45,12 +45,24 @@
 									<p>Normal Distribution a.k.a. Gaussian Distribution a.k.a. Bell Curve</p>
 								</header>
 								<div class="image main"><img src="images/standardnormalcurve.png" alt="" /></div>
+								<h2>What is a probability distribution?</h2>
 								<p> First, a normal distribution is a type of probability distribution, but what is this type of distribution? 
 									Imagine a cartesian coordinate system: a x and y axis. The x-axis would be a range of possible values and 
 									the y-axis would be the probability that any of these particular values would occur. This means that if the 
 									height of the y axis is high, there is a high probability of finding that value of all the x values and vice versa.
-									The figure above shows the shape of what a normal distribution looks like with the center being the most common values,
-									and the tails, where the graph pinches off on the left and right sides, are less common.</p>
+									The figure above shows the shape of what a normal distribution looks like with the center being the values that are most likely to occur,
+									and the tails, where the graph pinches off on the left and right sides, are less likely to occur.</p>
+								
+								<h2>Why is this distribution important?</h2>
+								<p>It is a heuristic for sciences to represent an unknown distribution as such. This is because of the Central Limit Theorem.
+								It states that regardless of the distribution, when one takes a sample of the population and plots the mean, and does this repeatedly on a histogram,
+								the distribution will tend towards the shape of a normal distribution. This means that statistical methods used in normal distributions can be used 
+								on other distributions as it approaches the normal shape with an increasing number of samples.	
+								</p>
+
+								<h2>How is it described mathematically?</h2>
+								<p>There are two important variables: (1) $/mu$ and (2) $/sigma$</p>
+
 								<script src="https://gist.github.com/lokkenchan/182e63e3056a0cefd2b2f50a8b51e2fc.js"></script>
                                 <ul class="actions special">
                                     <li><a href="blog.html" class="button">Read More Posts</a></li>
