--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
 										<h2><a href="NormalDist_CentralTend_Post.html">Normal Distribution</a></h2>
 									</header>
 									<a href="NormalDist_CentralTend_Post.html" class="image fit"><img src="images/standardnormalcurve.png" alt="" /></a>
-									<p><center>The distribution other distributions look up to.</center></p>
+									<p><center>The distribution other distributions want to be.</center></p>
 									<ul class="actions special">
 										<li><a href="NormalDist_CentralTend_Post.html" class="button">View Post</a></li>
 									</ul>
