normal distribution equation picture

--- a/NormalDist_CentralTend_Post.html
+++ b/NormalDist_CentralTend_Post.html
@@ -61,7 +61,16 @@
 								</p>
 
 								<h2>How is it described mathematically?</h2>
-								<p>There are two important variables: (1) $/mu$ and (2) $/sigma$</p>
+								<p>There are two important variables: (1) <span class="math display"><em>μ, the mean</em></span>
+									and (2) <span class="math display"><em>σ, the standard deviation</em></span>. The mean sets the center of 
+									the distribution, where the peak is, shifting it left or right. The standard deviation describes the spread of the bell curve,
+									with a larger value spreading out the tails further left and right and decreasing the peak of the curve.
+
+									<div class="image main"><img src="images/normaldistributioneq.png" alt="" /></div>
+								
+									A new term arises when μ = 0 and σ = 1. This equation simplifies and is known as the standard normal distribution.
+									This is shown in the featured image of this post. 
+								</p>
 
 								<script src="https://gist.github.com/lokkenchan/182e63e3056a0cefd2b2f50a8b51e2fc.js"></script>
                                 <ul class="actions special">
