update name of normal distribution post

--- a/blog.html
+++ b/blog.html
@@ -52,12 +52,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="NormalDist_CentralTend_Post.html">Normal Distribution</a></h2>
+										<h2><a href="NormalDist_Post.html">Normal Distribution</a></h2>
 									</header>
-									<a href="NormalDist_CentralTend_Post.html" class="image fit"><img src="images/standardnormalcurve.png" alt="" /></a>
+									<a href="NormalDist_Post.html" class="image fit"><img src="images/standardnormalcurve.png" alt="" /></a>
 									<p><center>The distribution other distributions want to be.</center></p>
 									<ul class="actions special">
-										<li><a href="NormalDist_CentralTend_Post.html" class="button">View Post</a></li>
+										<li><a href="NormalDist_Post.html" class="button">View Post</a></li>
 									</ul>
 								</article>
 								<article>
