adding varying mu and sigma image

--- a/NormalDist_Post.html
+++ b/NormalDist_Post.html
@@ -62,6 +62,9 @@
 								</p>
 
 								<h2>How is it described mathematically?</h2>
+
+								<div class="image main"><img src="images/varyingMuandSigma.png" alt="" /></div>
+
 								<p>There are two important variables: (1) <span class="math display"><em>μ (pronounced mu), the mean</em></span>
 									and (2) <span class="math display"><em>σ (pronounced sigma), the standard deviation</em></span>. The mean sets the center of 
 									the distribution, where the peak is, shifting the whole distribution to the left or the right. The standard deviation describes the spread of the bell curve,
@@ -69,7 +72,7 @@
 
 									<div class="image main"><img src="images/normaldistributioneq.png" alt="" /></div>
 								
-									A new term arises when μ = 0 and σ = 1. This equation simplifies and is known as the <em>standard normal distribution</em>.
+									f(x) is the equation that describes the normal distribution. A new term arises when μ = 0 and σ = 1. The equation simplifies and is known as the <em>standard normal distribution</em>.
 									This is shown in the featured image of this post. By setting, x = 0, this gets the height of the peak, 1/sqrt(2*pi) 
 									which is 0.399 rounded to 3 decimal places.
 								</p>
@@ -117,7 +120,7 @@
 									Some examples include test scores, height, and so on. However, when someone says they are of a particular score or height,
 									it is not completely telling of how they are relative to everyone else. When everyone has a high score for instance on a test,
 									it may just mean that the test was easier, but if one measures relative to others by how many standard deviations they are from the mean,
-									this becomes more meaningful. This is done by calculating z-scores. To find out more on how, read my z-score post! 
+									this becomes more meaningful. This is done by calculating z-scores. To find out more on how, read my <a href="Z_Score_Post.html">z-score post</a>! 
 								</p>
 								
                                 <ul class="actions special">
