add about tab, changed text, email, and removed number

--- a/Z_Score_Post.html
+++ b/Z_Score_Post.html
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
+							<li><a href="about.html">About</a></li>
 <!-- 							<li><a href="elements.html">Elements Reference</a></li>
  -->						</ul>
 						<ul class="icons">
@@ -58,12 +59,8 @@
 					<footer id="footer">
 						<section class="split contact">
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(301) 378-4041</a></p>
-							</section>
-							<section>
 								<h3>Email</h3>
-								<p><a href="#">lkc562@gmail.com</a></p>
+								<p>lkc562 at Gmail dot com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
