--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"> >> To Projects</a>
+						<a href="index.html" class="logo"> > To Projects</a>
 					</header>
 
 				<!-- Nav -->
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
+							<li><a href="about.html">About</a></li>
 <!-- 							<li><a href="elements.html">Elements Reference</a></li>
  -->						</ul>
 						<ul class="icons">
@@ -52,7 +53,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="NormalDist_Post.html">Normal Distribution</a></h2>
+										<h2>Normal Distribution</h2>
 									</header>
 									<a href="NormalDist_Post.html" class="image fit"><img src="images/standardnormalcurve.png" alt="" /></a>
 									<p><center>The distribution other distributions want to be.</center></p>
@@ -62,7 +63,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="Z_Score_Post.html">Z Score</a></h2>
+										<h2>Z Score</h2>
 									</header>
 									<a href="Z_Score_Post.html" class="image fit"><img src="images/zscore.png" alt="" /></a>
 									<p><center>Where am I on the normal distribution?</center></p>
@@ -99,12 +100,8 @@
 						</section> -->
 						<section class="split contact">
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(301) 378-4041</a></p>
-							</section>
-							<section>
 								<h3>Email</h3>
-								<p><a href="#">lkc562@gmail.com</a></p>
+								<p>lkc562 at Gmail dot com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
