--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
  							<li><a href="blog.html">Blog</a></li>
+							<li><a href="about.html">About</a></li>
 <!-- 							<li><a href="elements.html">Elements Reference</a></li> 
  -->						</ul>
 						<ul class="icons">
@@ -51,13 +52,19 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/CDC%20Health%20Behavior%20Geo.ipynb">Visualizing U.S. Health on Diet & Exercise</a></h2>
-									<p>I merged a CDC dataset on health behaviors and a dataset on health-related legislation to visualize the connection between health and the actions of law
-										 via choropleth map .</p>
+									<h2>Visualizing U.S. Health on Diet & Exercise</h2>
+									<p>What is the reponse of legislation in relation to the U.S. population health behaviors?</br>
+									Run the project and explore topics on obesity, physical activity, and nutrition by state with the first drop-down menu. 
+									Select among questions within each topic using the 2nd drop-down menu.
+									Change the year with the slider at the top and hover your cursor over a state to find the answer to the question you have selected. 
+									The data collected are health behaviors from the CDC (2011-2020) and Policy Data (2011-2017), 
+									so you will notice the map will not display if the data is absent.</br>  
+									See the full story <a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/README.md">here</a>.</p>
 								</header>
 								<a href="https://cdc-health-policy-choropleth.onrender.com/" class="image main"><img src="images/CDCmap.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://cdc-health-policy-choropleth.onrender.com/" class="button large">View Project</a></li>
+									<li><a href="https://cdc-health-policy-choropleth.onrender.com/" class="button large">Run Project</a></li>
+									<li><a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/CDC%20Health%20Behavior%20Geo.ipynb" class="button large">View Code</a></li>
 								</ul>
 							</article>
 
@@ -65,24 +72,24 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project 2:<br />
-										Classification</a></h2>
+										<h2>Classification</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p><center>Currently Under Construction.</center></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="#" class="button">Run Project</a></li>
+										<li><a href="#" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project 3:<br />
-										Regression</a></h2>
+										<h2>Regression</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p><center>Currently Under Construction.</center></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="#" class="button">Run Project</a></li>
+										<li><a href="#" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<!-- <article>
@@ -148,12 +155,8 @@
 								<p>Frederick, MD</p>
 							</section> -->
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(301) 378-4041</a></p>
-							</section>
-							<section>
 								<h3>Email</h3>
-								<p><a href="#">lkc562@gmail.com</a></p>
+								<p>lkc562 at Gmail dot com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
