--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>Visualizing U.S. Health on Diet & Exercise</h2>
-									<p>What is the reponse of legislation in relation to the U.S. population health behaviors?</br>
+									<p>What is the status of the U.S. population health, and how does each state respond in number of related, enacted policies?</br>
 									Run the project and explore topics on obesity, physical activity, and nutrition by state with the first drop-down menu. 
 									Select among questions within each topic using the 2nd drop-down menu.
 									Change the year with the slider at the top and hover your cursor over a state to find the answer to the question you have selected. 
