zscore post writing

--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Z Score</h2>
+										<h2>Z-Score</h2>
 									</header>
 									<a href="Z_Score_Post.html" class="image fit"><img src="images/zscore.png" alt="" /></a>
 									<p><center>Where am I on the normal distribution?</center></p>
