--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>Visualizing U.S. Health on Diet & Exercise</h2>
-									<p>What is the status of the U.S. population health, and how does each state respond in number of related, enacted policies?</br>
+									<p>What is the health status of the U.S. population, and how does each state respond by number of related, enacted policies?</br>
 									Run the project and explore topics on obesity, physical activity, and nutrition by state with the first drop-down menu. 
 									Select among questions within each topic using the 2nd drop-down menu.
 									Change the year with the slider at the top and hover your cursor over a state to find the answer to the question you have selected. 
-									The data collected are health behaviors from the CDC (2011-2020) and Policy Data (2011-2017), 
-									so you will notice the map will not display if the data is absent.</br>  
+									The data collected and used are health behaviors from the CDC (2011-2020) and Policy Data (2011-2017), so there is only an overlap from 2011 to 2017. 
+									Moreover, some questions are not asked year by year, so you will notice the map will not display if the data is absent.</br>  
 									See the full story <a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/README.md">here</a>.</p>
 								</header>
 								<a href="https://cdc-health-policy-choropleth.onrender.com/" class="image main"><img src="images/CDCmap.png" alt="" /></a>
