--- a/Z_Score_Post.html
+++ b/Z_Score_Post.html
@@ -76,8 +76,12 @@
 								With that in mind, the intersection is the area that is covered from the far left of the distribution to that exact z-score. Because the total area of the population sums to 1, this area corresponds to the probability of having those range of values, or the percentile score.
 								<div class="image main"><img src="images/ztable_probpercent.png" alt="" /></div>
 								</p>
-								<h2>What are some questions we can ask?</h2>
+								
+								<h2>Full Example with Questions</h2>
+								<p>Assume we had a class of 30 students who received the following grade scores: [68,76,84,61,71,73,73,63,61,60,89,58,52,66,75,65,67,72,68,57,74,78,55,58,64,59,67,84,66,68].</p>
+								<div class="image main"><img src="images/classhist.png" alt="" /></div>				
 								<p>We can ask what is the probability (the decimal form) or percentile score (percent form) of raw values below, above, or between values.</p>
+								
 								<h2>How to use Z-score for outlier detection?</h2>
 								<p></p>
 								<h2>Z-score vs Z-statistic</h2>
