zscore post additions

--- a/Z_Score_Post.html
+++ b/Z_Score_Post.html
@@ -78,9 +78,21 @@
 								</p>
 								
 								<h2>Full Example with Questions</h2>
-								<p>Assume we had a class of 30 students who received the following grade scores: [68,76,84,61,71,73,73,63,61,60,89,58,52,66,75,65,67,72,68,57,74,78,55,58,64,59,67,84,66,68].</p>
+								<p>Assume we had a class of 35 students who received the following grade scores: [84, 73, 70, 55, 67, 67, 69, 64, 69, 66, 59, 77, 77, 83, 70, 66, 65, 57, 77, 61, 60, 68, 81, 71, 61, 64, 75, 68, 63, 68, 75, 85, 60, 64, 63].</p>
 								<div class="image main"><img src="images/classhist.png" alt="" /></div>				
-								<p>We can ask what is the probability (the decimal form) or percentile score (percent form) of raw values below, above, or between values.</p>
+								<p>We can ask what is the probability (the decimal form) of raw values below, above, or between values. We can also ask what the percentile score is for a value.
+								The example questions we are going to ask include the following:
+								(1) What is the probability of a score being below 60?
+								(2) What is the probability of a score being above 80?
+								(3) What is the probability having a score between 70 and 85?
+								It also important to note an assumption: Since we have >30 instances and we consider this class as the complete population, we approximate the normal distribution and use the z-score and z-table.
+								</p>
+								<h3>Preparation work</h3>
+								<p>We need to calculate some values: (1) the mean, (2) the standard deviation.</p>
+								<h3>What is the probability of a score being below 60?</h3>
+								<p>1) We need to find the area from the left tail all the way to the score with 70.</p>
+								<h3>What is the probability of a score being above 80?</h3>
+								<h3>What is the probability having a score between 70 and 85?</h3>
 								
 								<h2>How to use Z-score for outlier detection?</h2>
 								<p></p>
