--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Classification</h2>
+										<h2>Tableau</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p><center>Currently Under Construction.</center></p>
+									<a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p><center>View my Tableau Public Creations</center></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Run Project</a></li>
-										<li><a href="#" class="button">View Code</a></li>
+										<li><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
