adding latex mathjax script

--- a/Z_Score_Post.html
+++ b/Z_Score_Post.html
@@ -10,6 +10,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+		<script>
+			MathJax = {
+				tex: {
+					inlineMath: [["$","$"],["\\(","\\)"]]
+				}
+		}
+		</script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -101,6 +109,10 @@
 								<h2>Z-score vs T-score?</h2>
 								<p>Z-scores are used for normal distributions, where you know the population standard deviation and there are at least 30 samples.</p>
                                 
+								<h2>Testing Latex</h2>
+								<p>$\int f(x) dx $</p>
+								
+
 								<ul class="actions special">
                                     <li><a href="blog.html" class="button">Read More Posts</a></li>
                                 </ul>
