test text under blog image

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,9 @@
 										Learn and grow with me, but I must ask one question: Ken you Data?</p>
 								</header>
 								<div class="image main"><img src="images/temperature_screenshot.png" alt="" /></div>
+								<p>This is a test.</p>
 							</section>
+							
 						<!-- Posts -->
 							<section class="posts">
 								<article>
