add descriptive text under blog temperature image

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,11 @@
 										Learn and grow with me, but I must ask one question: Ken you Data?</p>
 								</header>
 								<div class="image main"><img src="images/temperature_screenshot.png" alt="" /></div>
-								<p>This is a test.</p>
+								<p>Temperature data from a weather station in Michigan is shown above varying by day over a span of years.   
+								The temperature is separated into red, green, and blue bands for high, medium, and low temperatures of that day respectively.
+								We can see the sinusoidal pattern (the rise and fall) reflecting the seasonality of the data which is to be expected.
+								Given all these years of data we took the subsequent year and mapped its upper and lower extremes as black and orange dots respectively 
+								to see if it exceeded the prior years. These extremes exceeded those of prior years showing a spreading of temperature data.</p>
 							</section>
 							
 						<!-- Posts -->
