rearrange and added beginning of Xray project

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2>Pneumonia Image Classification <br> by Chest X-Ray </h2>
+										<p>Upload a chest X-ray image to the API and it will output whether the chest xray indicates pneumonia and to what degree of confidence.</p>
+									</header>
+									<a href="#" class="image fit"><img src="images/person30_bacteria_155.jpeg" alt="" /></a>
+									<p><center>Currently Under Construction.</center></p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Run Project</a></li>
+										<li><a href="#" class="button">View Code</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2>Tableau</h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -88,17 +100,7 @@
 										<li><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="button">View Projects</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2>Regression</h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p><center>Currently Under Construction.</center></p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Run Project</a></li>
-										<li><a href="#" class="button">View Code</a></li>
-									</ul>
-								</article>
+								
 								<!-- <article>
 									<header>
 										<span class="date">April 18, 2017</span>
