update construction modifications

--- a/NormalDist_Post.html
+++ b/NormalDist_Post.html
@@ -129,7 +129,7 @@
 									Some examples include test scores, height, and so on. However, when someone says they are of a particular score or height,
 									it is not completely telling of how they are relative to everyone else. When everyone has a high score for instance on a test,
 									it may just mean that the test was easier, but if one measures relative to others by how many standard deviations they are from the mean,
-									this becomes more meaningful. This is done by calculating z-scores. To find out more on how, read my <a href="Z_Score_Post.html">z-score post</a>! 
+									this becomes more meaningful. This is done by calculating z-scores. To find out more on how, read my <a href="#">z-score post</a>! 
 								</p>
 								
                                 <ul class="actions special">
