--- a/blog.html
+++ b/blog.html
@@ -79,11 +79,12 @@
 									<header>
 										<h2>Z-Score</h2>
 									</header>
-									<a href="Z_Score_Post.html" class="image fit"><img src="images/zscore.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/zscore.png" alt="" /></a>
 									<p><center>Where am I on the normal distribution?</center></p>
 									<ul class="actions special">
-										<li><a href="Z_Score_Post.html" class="button">View Post</a></li>
+										<li><a href="#" class="button">View Post</a></li>
 									</ul>
+									<p><center>[Currently Under Construction]</center></p>
 								</article>
 								
 							</section>
