--- a/index.html
+++ b/index.html
@@ -81,24 +81,26 @@
 								<article>
 									<header>
 										<h2>Pneumonia Image Classification <br> by Chest X-Ray </h2>
-										<p>Upload a chest X-ray image to the API and it will output whether the chest xray indicates pneumonia and to what degree of confidence.</p>
+										<p>Upload a chest X-ray image, select a classifier, and it will output whether the chest xray indicates pneumonia and to what degree of confidence.</p>
 									</header>
-									<a href="#" class="image fit"><img src="images/person30_bacteria_155.jpeg" alt="" /></a>
-									<p><center>Currently Under Construction.</center></p>
+									<a href="https://pna-cxr-classifier.onrender.com/" class="image fit"><img src="images/person30_bacteria_155.jpeg" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="#" class="button">Run Project</a></li>
+										<li><a href="https://pna-cxr-classifier.onrender.com/" class="button">Run Project</a></li>
 										<li><a href="#" class="button">View Code</a></li>
 									</ul>
+									<p><center>[Currently Under Construction]</center></p>
 								</article>
 								<article>
 									<header>
-										<h2>Tableau</h2>
+										<h2>Tableau <br> Public <br> Creations</h2>
+										<p>Tableau is a visualization software equivalent to PowerBI to extract insights from data. 
+											View my Tableau Public Creations below.</p>
 									</header>
 									<a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p><center>View my Tableau Public Creations</center></p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="button">View Projects</a></li>
 									</ul>
+									<p><center>[Currently Under Construction]</center></p>
 								</article>
 								
 								<!-- <article>
