--- a/index.html
+++ b/index.html
@@ -81,14 +81,13 @@
 								<article>
 									<header>
 										<h2>Pneumonia Image Classification <br> by Chest X-Ray </h2>
-										<p>Upload a chest X-ray image, select a classifier, and it will output whether the chest xray indicates pneumonia and to what degree of confidence.</p>
+										<p>Upload a chest X-ray image (jpg/jpeg), select a classifier, and it will output whether the chest xray indicates pneumonia and to what degree of confidence.</p>
 									</header>
 									<a href="https://pna-cxr-classifier.onrender.com/" class="image fit"><img src="images/person30_bacteria_155.jpeg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://pna-cxr-classifier.onrender.com/" class="button">Run Project</a></li>
 										<li><a href="#" class="button">View Code</a></li>
 									</ul>
-									<p><center>[Currently Under Construction]</center></p>
 								</article>
 								<article>
 									<header>
