Attached readme, added image to about.

--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@
 								<header class="major">
 									<h2>Visualizing U.S. Health on Diet & Exercise</h2>
 									<p>What is the health status of the U.S. population, and how does each state respond by number of related, enacted policies?</br>
-									Run the project and explore topics on obesity, physical activity, and nutrition by state with the first drop-down menu. 
-									Select among questions within each topic using the 2nd drop-down menu.
-									Change the year with the slider at the top and hover your cursor over a state to find the answer to the question you have selected. 
-									The data collected and used are health behaviors from the CDC (2011-2020) and Policy Data (2011-2017), so there is only an overlap from 2011 to 2017. 
-									Moreover, some questions are not asked year by year, so you will notice the map will not display if the data is absent.</br>  
-									See the full story <a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/README.md">here</a>.</p>
+									Select a year (2011-2020), one of the three health topics (obesity, physical activity, and nutrition), a question within that topic, and
+									hover your cursor over a state to display the a percentage of the population fitting that question. The data collected is from the CDC on behavioral risk factors (2011-2020) 
+									and Policy Data (2011-2017), so there is only an overlap from 2011 to 2017. Moreover, some questions are not asked year by year, 
+									so you will notice the map will not display if the data is absent. <a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/README.md">README</a>.</p>
 								</header>
 								<a href="https://cdc-health-policy-choropleth.onrender.com/" class="image main"><img src="images/CDCmap.png" alt="" /></a>
 								<ul class="actions special">
@@ -81,7 +79,8 @@
 								<article>
 									<header>
 										<h2>Pneumonia Image Classification <br> by Chest X-Ray </h2>
-										<p>Does your X-ray indicate pneumonia? If so, what type? Upload a chest X-ray image (jpg/jpeg), select a classifier, and it will output whether the chest xray indicates pneumonia and to what degree of confidence.</p>
+										<p>Does your X-ray indicate pneumonia? If so, what type? Upload a chest X-ray image (jpg/jpeg), 
+											select a classifier, and it will output whether the chest xray indicates pneumonia and to what degree of confidence. <a href="https://github.com/lokkenchan/PNA_Classifier#readme">README</a>.</p> 
 									</header>
 									<a href="https://lokkenchan-pna-classifier-pna-app-ygl1p7.streamlit.app/" class="image fit"><img src="images/person30_bacteria_155.jpeg" alt="" /></a>
 									<ul class="actions special">
