--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 									<h2>Visualizing U.S. Health on Diet & Exercise</h2>
 									<p>What is the health status of the U.S. population, and how does each state respond by number of related, enacted policies?</br>
 									Select a year (2011-2020), one of the three health topics (obesity, physical activity, and nutrition), a question within that topic, and
-									hover your cursor over a state to display the a percentage of the population fitting that question. The data collected is from the CDC on behavioral risk factors (2011-2020) 
-									and Policy Data (2011-2017), so there is only an overlap from 2011 to 2017. Moreover, some questions are not asked year by year, 
+									hover your cursor over a state to display the percentage of the population fitting that question. The data collected is from the CDC on behavioral risk factors (2011-2020) 
+									and policy data (2011-2017). Moreover, some questions are not asked year by year, 
 									so you will notice the map will not display if the data is absent. <a href="https://github.com/lokkenchan/CDC_BehaviorPolicy_GeoPlot/blob/main/README.md">README</a>.</p>
 								</header>
 								<a href="https://cdc-health-policy-choropleth.onrender.com/" class="image main"><img src="images/CDCmap.png" alt="" /></a>
@@ -94,7 +94,7 @@
 										<p>Tableau is a visualization software equivalent to PowerBI to extract insights from data. 
 											View my Tableau Public Creations below.</p>
 									</header>
-									<a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/Tableau_logo.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="button">View Projects</a></li>
 									</ul>
