add more skills

--- a/about.html
+++ b/about.html
@@ -95,6 +95,97 @@
 										<img class="small_image" src="images/Matplotlib_logo.png" alt="Small image">
 										<h3>Matplotlib</h3>
 									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Seaborn_logo.svg" alt="Small image">
+										<h3>Seaborn</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Plotly_logo.png" alt="Small image">
+										<h3>Plotly</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Bokeh_logo.png" alt="Small image">
+										<h3>Bokeh</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Scikitlearn_logo.png" alt="Small image">
+										<h3>Scikit Learn</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Tensorflow_logo.png" alt="Small image">
+										<h3>Tensorflow</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Keras_logo.png" alt="Small image">
+										<h3>Keras</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Pytorch_logo.png" alt="Small image">
+										<h3>Pytorch</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Aws_logo.png" alt="Small image">
+										<h3>AWS</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Hadoop_logo.png" alt="Small image">
+										<h3>Hadoop</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Spark_logo.png" alt="Small image">
+										<h3>Spark</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Hive_logo.png" alt="Small image">
+										<h3>Hive</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Docker_logo.png" alt="Small image">
+										<h3>Docker</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Git_logo.png" alt="Small image">
+										<h3>Git</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Bash_logo.png" alt="Small image">
+										<h3>Bash</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/R_logo.png" alt="Small image">
+										<h3>R</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Excel_logo.png" alt="Small image">
+										<h3>Excel</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Vim_logo.png" alt="Small image">
+										<h3>Vim</h3>
+									</div>
+
+									<div class="content">
+										<img class="small_image" src="images/Latex_logo.png" alt="Small image">
+										<h3>LaTeX</h3>
+									</div>
+									
 								</div>
 
 							</section>
