Wording on profile

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 									<p>Lok-Ken Chan is a perpetual learner and practitioner of STEM. He has made it his mission to combine the developments of STEM
 									to better health care and STEM related fields. With this in mind, he graduated from Penn State University with a bachelors in both Biomedical Engineering (BME) and Physics,
 									as well as a minor in mathematics. He later went on to work as a consultant to improve army medicine with project MEDHUB and developed a website to improve 
-									access to a more personalized cancer care with icare.org. He hopes to continue to work to improve medicine with digitized tools in the field of data. 
-									Moreover, help empower and educate others by teaching STEM topics.</p>
+									access to a more personalized cancer care with icare.org. He hopes to continue to improve medicine with digitized tools in the field of data. 
+									Moreover, empower and educate others by teaching STEM topics.</p>
 								</header>
 
 								<div class="wrapper">
@@ -185,7 +185,7 @@
 										<img class="small_image" src="images/Latex_logo.png" alt="Small image">
 										<h3>LaTeX</h3>
 									</div>
-									
+
 								</div>
 
 							</section>
