resizing tableau image

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 		}
 		</script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!--Customization of lone images-->
+		<style>
+			img {
+				max-width:100%;
+				max-height:100%;
+			}
+			.picture1 {
+				width: 300px;
+				height: 300px;
+				margin-left: auto;
+				margin-right: auto;
+				margin-bottom: 40px;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -94,11 +108,11 @@
 										<p>Tableau is a visualization software equivalent to PowerBI to extract insights from data. 
 											View my Tableau Public Creations below.</p>
 									</header>
-									<a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/Tableau_logo.png" alt="" /></a>
+									<div class="picture1"><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="image fit"><img src="images/Tableau_logo.png" alt="" /></a></div>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="button">View Projects</a></li>
 									</ul>
-									<p><center>[Currently Under Construction]</center></p>
+										<p><center>[Currently Under Construction]</center></p>
 								</article>
 								
 								<!-- <article>
