--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/contact_css.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script>
+		<!-- <script>
 			const form = document.querySelector('#contact-form');
 			form.addEventListener('submit', (e) =>{
 				e.preventDefault();
@@ -31,7 +31,7 @@
 				.then(data => console.log(data))
 				.catch(error => console.log(error));
 			});
-		</script>
+		</script> -->
 	
 	</head>
 	<body class="is-preload">
@@ -62,7 +62,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="container">
-						<!-- <form action="https://formsubmit.co/4dabc2acaef9b104aacb16839ea5cc19" method="POST">
+						<form action="https://formsubmit.co/4dabc2acaef9b104aacb16839ea5cc19" method="POST">
 							<h3>Tell Me About Yourself</h3>
 							<input type="text" name="name" placeholder="Your Name" required>
 							<input type="email" name="email" placeholder="Email" required>
@@ -70,9 +70,9 @@
 							<textarea name="message" rows="4" placeholder="How can I help you?"></textarea> 
 							<button type="submit">Submit</button>
 							<input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html">
-						</form> -->
+						</form>
 
-						<form id="contact-form">
+						<!-- <form id="contact-form">
 							<h3>Tell Me About Yourself</h3>
 							<label for="name">Name:</label>
 							<input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -83,8 +83,8 @@
 							<label for="message">Message:</label>
 							<textarea id="message" name="message" rows="4" placeholder="How can I help you?"></textarea> 
 							<button type="submit">Submit</button>
-							<!-- <input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html"> -->
-						</form>
+							<input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html"> 
+						</form> -->
 					</div>
 					
 
