--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="container">
-						<form action="https://formsubmit.co/4dabc2acaef9b104aacb16839ea5cc19" method="POST">
+						<form action="https://formsubmit.co/lkc562@gmail.com" method="POST">
 							<h3>Tell Me About Yourself</h3>
 							<input type="text" name="name" placeholder="Your Name" required>
 							<input type="email" name="email" placeholder="Email" required>
