--- a/contact.html
+++ b/contact.html
@@ -11,28 +11,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/contact_css.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- <script>
-			const form = document.querySelector('#contact-form');
-			form.addEventListener('submit', (e) =>{
-				e.preventDefault();
-				fetch('https://formsubmit.co/4dabc2acaef9b104aacb16839ea5cc19',{
-					method: 'POST',
-					headers: {
-						'Content-Type': 'application/json'
-					},
-					body: JSON.stringify({
-						name: form.name.value,
-						email: form.email.value,
-						phone: form.phone.value,
-						message: form.message.value
-					})
-				})
-				.then(response => response.json())
-				.then(data => console.log(data))
-				.catch(error => console.log(error));
-			});
-		</script> -->
-	
 	</head>
 	<body class="is-preload">
 
@@ -62,7 +40,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="container">
-						<form action="https://formsubmit.co/lkc562@gmail.com" method="POST">
+						<form action="https://formsubmit.co/4dabc2acaef9b104aacb16839ea5cc19" method="POST">
 							<h3>Tell Me About Yourself</h3>
 							<input type="text" name="name" placeholder="Your Name" required>
 							<input type="email" name="email" placeholder="Email" required>
@@ -71,20 +49,6 @@
 							<button type="submit">Submit</button>
 							<input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html">
 						</form>
-
-						<!-- <form id="contact-form">
-							<h3>Tell Me About Yourself</h3>
-							<label for="name">Name:</label>
-							<input type="text" id="name" name="name" placeholder="Your Name" required>
-							<label for="email">Email:</label>
-							<input type="email" id="email" name="email" placeholder="Email" required>
-							<label for="phone">Phone:</label>
-							<input type="text" id="phone" name="phone" placeholder="Phone No." required>
-							<label for="message">Message:</label>
-							<textarea id="message" name="message" rows="4" placeholder="How can I help you?"></textarea> 
-							<button type="submit">Submit</button>
-							<input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html"> 
-						</form> -->
 					</div>
 					
 
@@ -94,27 +58,6 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section> -->
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
