--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,11 @@
 							<input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html">
 						</form>
 					</div>
+
+					<!-- Calendly inline widget begin -->
+					<div class="calendly-inline-widget" data-url="https://calendly.com/kenudata/30min" style="min-width:320px;height:630px;"></div>
+					<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+					<!-- Calendly inline widget end -->
 					
 
 				</div>
