services update and contact with phone no. optional

--- a/about.html
+++ b/about.html
@@ -60,7 +60,28 @@
 										Beyond this, I partnered with a cancer researcher to develop a website to personalize cancer care with icare.org. Its mission was to form a network of physicians, scientists, and patients to extend the options for care. 
 										I now want to concentrate on using data-driven tools to generate insight and capability as well as empower and instruct by teaching STEM subjects.
 									</p>
-								</header>
+
+								<div class="wrapper">
+										&nbsp;
+										<div class="top_div">
+											<h2>Services</h2>
+											<hr>
+										</div>
+	
+										<div class="content">
+											<img class="small_image" src="images/analysis_pic.jpg" alt="Small image">
+											<h3>Data Analysis</h3>
+										</div>
+		
+										<div class="content">
+											<img class="small_image" src="images/web_app_pic.png" alt="Small image">
+											<h3>Web Applications</h3>
+										</div>
+		
+										<div class="content">
+											<img class="small_image" src="images/stem_tutoring_pic.png" alt="Small image">
+											<h3>STEM Tutoring</h3>
+								</div>
 
 								<div class="wrapper">
 									&nbsp;
