--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 							<h3>Tell Me About Yourself</h3>
 							<input type="text" name="name" placeholder="Your Name" required>
 							<input type="email" name="email" placeholder="Email" required>
-							<input type="text" name="phone" placeholder="Phone No." required>
+							<input type="text" name="phone" placeholder="Phone No.">
 							<textarea name="message" rows="4" placeholder="How can I help you?"></textarea> 
 							<button type="submit">Submit</button>
 							<input type="hidden" name="_next" value="https://lokkenchan.github.io/Data-Portfolio/thanks.html">
