--- a/Template_Post.html
+++ b/Template_Post.html
@@ -36,7 +36,8 @@
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
-<!-- 							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="contact.html">Contact</a></li>
+<!-- 						<li><a href="elements.html">Elements Reference</a></li>
  -->						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/lok-ken-chan/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
