--- a/Z_Score_Post.html
+++ b/Z_Score_Post.html
@@ -36,8 +36,8 @@
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
-<!-- 							<li><a href="elements.html">Elements Reference</a></li>
- -->						</ul>
+							<li><a href="contact.html">Contact</a></li>
+<!-- 						<li><a href="elements.html">Elements Reference</a></li>-->						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/lok-ken-chan/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/lokkenchan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
