--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 					</div>
 
 					<!-- Calendly inline widget begin -->
-					<div class="calendly-inline-widget" data-url="https://calendly.com/kenudata/30min" style="min-width:320px;height:630px;"></div>
+					<div class="calendly-inline-widget" data-url="https://calendly.com/kenudata/zoom-meeting" style="min-width:320px;height:630px;"></div>
 					<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 					<!-- Calendly inline widget end -->
 					
