added z-score post

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 										I made it my mission to combine the developments of STEM to better health care and STEM related fields. 
 										With this in mind, I graduated from Penn State University with a bachelor's in both biomedical engineering (BME) and physics, as well as a minor in mathematics. 
 										Later, I worked as a consultant to advance army telemedicine with project MEDHUB, allowing medics in transport to concentrate more on saving lives while generating a more complete medical record. 
-										Beyond this, I partnered with a cancer researcher to develop a website to personalize cancer care with icare.org. Its mission was to form a network of physicians, scientists, and patients to extend the options for care. 
+										Beyond this, I partnered with a cancer researcher to develop a website to personalize cancer care with icare.org. Its mission was to form a network of physicians, scientists, and patients to extend the options of care. 
 										I now want to concentrate on using data-driven tools to generate insight and capability as well as empower and instruct by teaching STEM subjects.
 									</p>
 
