--- a/blog.html
+++ b/blog.html
@@ -81,11 +81,10 @@
 										<h2>Z-Score</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/zscore.png" alt="" /></a>
-									<p><center>Where am I on the normal distribution?</center></p>
+									<p><center>How are you relative to everyone else?</center></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Post</a></li>
+										<li><a href="Z_Score_Post.html" class="button">View Post</a></li>
 									</ul>
-									<p><center>[Currently Under Construction]</center></p>
 								</article>
 								
 							</section>
