image link from blog page to z-score post

--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
 									<header>
 										<h2>Z-Score</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/zscore.png" alt="" /></a>
+									<a href="Z_Score_Post.html" class="image fit"><img src="images/zscore.png" alt="" /></a>
 									<p><center>How are you relative to everyone else?</center></p>
 									<ul class="actions special">
 										<li><a href="Z_Score_Post.html" class="button">View Post</a></li>
