--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<!-- <article>
 									<header>
 										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
+										<h2><a href="#">Ante <br />
 										interdum dolor</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
