Moved PNA project up

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
+								<article class="post featured">
+									<header class="major">
+										<h2>Pneumonia Image Classification <br> by Chest X-Ray</h2>
+										<p>Does your X-ray indicate pneumonia? If so, what type? Upload a chest X-ray image (jpg/jpeg), 
+											select a classifier, and it will output whether the chest xray indicates pneumonia and to what degree of confidence. <a href="https://github.com/lokkenchan/PNA_Classifier#readme">README</a>.</p>
+									</header>
+									<a href="https://lokkenchan-pna-classifier-pna-app-ygl1p7.streamlit.app" class="image main"><img src="images/person30_bacteria_155.jpeg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://lokkenchan-pna-classifier-pna-app-ygl1p7.streamlit.app" class="button large">Run Project</a></li>
+										<li><a href="https://github.com/lokkenchan/PNA_Classifier/blob/main/Pneumonia_Image_Classification_Capstone.ipynb" class="button large">View Code</a></li>
+									</ul>
+								</article>
+
 								<header class="major">
 									<h2>Visualizing U.S. Health on Diet & Exercise</h2>
 									<p>What is the health status of the U.S. population, and how does each state respond by number of related, enacted policies?</br>
@@ -90,8 +103,12 @@
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
+							
+
+
+							<!-- <section class="posts"> -->
+
+								<!-- <article>
 									<header>
 										<h2>Pneumonia Image Classification <br> by Chest X-Ray </h2>
 										<p>Does your X-ray indicate pneumonia? If so, what type? Upload a chest X-ray image (jpg/jpeg), 
@@ -102,8 +119,9 @@
 										<li><a href="https://lokkenchan-pna-classifier-pna-app-ygl1p7.streamlit.app/" class="button">Run Project</a></li>
 										<li><a href="https://github.com/lokkenchan/PNA_Classifier/blob/main/Pneumonia_Image_Classification_Capstone.ipynb" class="button">View Code</a></li>
 									</ul>
-								</article>
-								<article>
+								</article> -->
+
+								<!-- <article>
 									<header>
 										<h2>Tableau <br> Public <br> Creations</h2>
 										<p>Tableau is a visualization software equivalent to PowerBI to extract insights from data. 
@@ -114,7 +132,7 @@
 										<li><a href="https://public.tableau.com/app/profile/lok.ken.chan" class="button">View Projects</a></li>
 									</ul>
 										<p><center>[Currently Under Construction]</center></p>
-								</article>
+								</article> -->
 								
 								<!-- <article>
 									<header>
